Making changes about user's roles during registration