@@ -6,9 +6,13 @@ import bg.softuni.fooddelivery.domain.entities.UserEntity;
 import bg.softuni.fooddelivery.domain.entities.UserRoleEntity;
 import bg.softuni.fooddelivery.domain.enums.UserRoleEnum;
 import bg.softuni.fooddelivery.repositories.UserRepository;
+import bg.softuni.fooddelivery.repositories.UserRoleRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -17,21 +21,25 @@ public class UserService {
     private final ModelMapper modelMapper;
     private final PasswordEncoder passwordEncoder;
     private final UserRepository userRepository;
+    private final UserRoleService userRoleService;
 
     public UserService(ModelMapper modelMapper,
                        PasswordEncoder passwordEncoder,
-                       UserRepository userRepository) {
+                       UserRepository userRepository,
+                       UserRoleService userRoleService) {
         this.modelMapper = modelMapper;
         this.passwordEncoder = passwordEncoder;
         this.userRepository = userRepository;
+        this.userRoleService = userRoleService;
     }
 
     public void registerUser(UserModelDto userToRegister) {
 
         UserEntity userToSave=this.mapToUser(userToRegister);
+        UserRoleEntity userRole=this.userRoleService.getRoleByType(UserRoleEnum.USER);
 
         userToSave.setPassword(passwordEncoder.encode(userToSave.getPassword()))
-                .setRoles(List.of(new UserRoleEntity().setRole(UserRoleEnum.USER)));
+                .setRoles(new ArrayList<>(Collections.singletonList(userRole)));
 
         this.userRepository.saveAndFlush(userToSave);
     }
